--- a/.github/workflows/build-pages.yml
+++ b/.github/workflows/build-pages.yml
@@ -9,3 +9,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: ./deploy.sh
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: gh-pages
+          directory: dist
