--- a/.github/workflows/build-pages.yml
+++ b/.github/workflows/build-pages.yml
@@ -11,6 +11,15 @@ jobs:
       - run: ./deploy.sh
       - name: Push changes
         uses: ad-m/github-push-action@master
+      - name: Commit files
+        run: |
+          cd dist
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git init
+          git add -A
+          git commit -m 'deploy'
+      - name: Push changes
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: gh-pages
