--- a/.github/workflows/build-pages.yml
+++ b/.github/workflows/build-pages.yml
@@ -12,8 +12,8 @@ jobs:
       - name: Commit files
         run: |
           cd dist
-          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git config --global user.name "github-actions[bot]"
+          git config --global user.email "29306733+oldshensheep@users.noreply.github.com "
+          git config --global user.name "oldshensheep"
           git init
           git add -A
           git commit -m 'deploy'
