--- a/.github/workflows/build-pages.yml
+++ b/.github/workflows/build-pages.yml
@@ -23,3 +23,5 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: gh-pages
           directory: dist
+          force: true
+
