--- a/.github/workflows/build-pages.yml
+++ b/.github/workflows/build-pages.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: ./deploy.sh
+      - run: python3 deploy.py
       - name: Commit files
         run: |
           cd dist
